// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabValidators has the expected html structure 1`] = `
<div>
  <table-validators-stub
    validators="[object Object],[object Object],[object Object]"
  />
</div>
`;

exports[`TabValidators shows a message if still connecting 1`] = `
<div>
  <tm-data-connecting-stub />
</div>
`;

exports[`TabValidators shows a message if still loading 1`] = `
<div>
  <tm-data-loading-stub
    title="Data is loading…"
  />
</div>
`;

exports[`TabValidators shows a message if there is nothing to display 1`] = `
<div>
  <tm-data-empty-stub />
</div>
`;
